fix: update padding in DoubleButton component for consistent spacing; adjust gap in Navbar links for improved layout

--- a/src/components/navbar/style.module.scss
+++ b/src/components/navbar/style.module.scss
@@ -65,7 +65,7 @@
 
 .links {
     @include flexCenter(row);
-    gap: $spacing-sm;
+    gap: $site-margin-desktop;
     background-color: #fff;
     padding: $size-1 $size-15;
     border-radius: 0.375rem
