--- a/src/ui/doubleButton/style.module.scss
+++ b/src/ui/doubleButton/style.module.scss
@@ -5,7 +5,7 @@
     @include flex(row, flex-start, center);
     
     .body, .icon {
-        padding: $size-1 $size-15;
+        padding: $size-075 $size-15;
         background-color: $container-color;
         border-radius: $border-radius-sm;
         font-family: $medium-font;
